fixed some broken styles. loading Gallery3D by lazy

--- a/src/Root.scss
+++ b/src/Root.scss
@@ -25,7 +25,7 @@
     }
 
     @media only screen and (max-width:767px) {
-        font-size: map-get($font-size, lg);
+        letter-spacing: 1;
     }
 }
 
