--- a/src/scss/shared.scss
+++ b/src/scss/shared.scss
@@ -12,8 +12,7 @@ $color-main-bg: linear-gradient(
 );
 
 .placeholder {
-    @include flexbox(column);
-    width: calc(100vw - 8rem);
+    width: calc(100vw - 4rem);
 }
 
 .homeFlexbox {
